error.log
    Checking piper v1.0.0 (/Users/biplavbarua/Developer/piper)
warning: unused import: `std::time::Duration`
 --> src/app.rs:3:5
  |
3 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `self`
 --> src/app.rs:9:21
  |
9 | use crate::spyder::{self, Spyder};
  |                     ^^^^

warning: unused imports: `Axis`, `Chart`, `Dataset`, `Gauge`, `GraphType`, `ListItem`, `List`, and `symbols`
 --> src/ui.rs:6:43
  |
6 |         Block, Borders, Cell, Row, Table, List, ListItem, Paragraph, Tabs, Gauge, Chart, Axis, Dataset, GraphType
  |                                           ^^^^  ^^^^^^^^                   ^^^^^  ^^^^^  ^^^^  ^^^^^^^  ^^^^^^^^^
7 |     },
8 |     symbols,
  |     ^^^^^^^

error[E0308]: mismatched types
  --> src/ui.rs:41:9
   |
41 |         "        |_| ".to_string(),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
help: try removing the method call
   |
41 -         "        |_| ".to_string(),
41 +         "        |_| ",
   |

warning: unused import: `Stylize`
 --> src/ui.rs:3:37
  |
3 |     style::{Color, Modifier, Style, Stylize},
  |                                     ^^^^^^^

warning: unused variable: `tar_zst`
   --> src/app.rs:406:29
    |
406 |                         let tar_zst = path.with_extension("tar.zst");
    |                             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_tar_zst`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `parent`
  --> src/compressor.rs:49:9
   |
49 |     let parent = input_path.parent().unwrap_or(Path::new("."));
   |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_parent`

warning: unused variable: `output_path`
  --> src/compressor.rs:53:9
   |
53 |     let output_path = input_path.with_extension("tar.zst"); 
   |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_output_path`

warning: unused variable: `app`
   --> src/ui.rs:138:34
    |
138 | fn draw_analytics(f: &mut Frame, app: &App, area: Rect) {
    |                                  ^^^ help: if this is intentional, prefix it with an underscore: `_app`

For more information about this error, try `rustc --explain E0308`.
warning: `piper` (bin "piper") generated 8 warnings
error: could not compile `piper` (bin "piper") due to 1 previous error; 8 warnings emitted
